# workflow-api

./: .env  Dockerfile  README.md  build_and_push.sh  pyproject.toml
deploy/: 01-argo-server-svc.yaml  03-workflow-api-configmap.yaml  04-workflow-api-deployment.yaml  05-workflow-api-svc.yaml
k8s/: argo-service-account.yaml
src/: main.py  routes.py
src/config/: initial_config.py
src/requests/: map_reduce.py
src/workflows/: artifact.py  map_reduce.py  mapreduce.py  say_hello.py
