[tool.poetry]
name = "workflow-api"
version = "0.1.0"
description = "API for running Argo Workflows"
authors = ["KCN"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
argo-workflows = "^6.5.6"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
