[tool.poetry]
name = "workflow-api"
version = "0.1.0"
description = "API for running Argo Workflows"
authors = ["KCN"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
black = "^24.4.2"
isort = "^5.13.2"
couler = {git = "https://github.com/couler-proj/couler"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
